objects/Medication__c.object
<CustomObject>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalId>true</externalId>
        <label>Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prescribe__c</fullName>
        <label>Prescribe</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Penicillin</fullName>
                    <label>Penicillin - MediCorp</label>
                </value>
                <value>
                    <fullName>Morphine</fullName>
                    <isActive>false</isActive>
                    <label>Morphine</label>
                </value>
                <value>
                    <fullName>Penicillin - PharmaGlobal</fullName>
                    <isActive>false</isActive>
                    <label>Penicillin - PharmaGlobal</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Side_Effects__c</fullName>
        <label>Side Effects</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <label>Supplier</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Medication</label>
    <nameField>
        <label>Medicaton Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>